Fixed top-padding on mobile

--- a/src/app/reservation/reservation-edit/reservation-edit.component.css
+++ b/src/app/reservation/reservation-edit/reservation-edit.component.css
@@ -23,3 +23,9 @@ mat-form-field {
   width: 100%;
   max-width: 20rem;
 }
+
+@media screen and (max-height: 600px) {
+  .container {
+    padding: 1%;
+  }
+}
